# swpp202601-compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  format-all.sh
src/: CMakeLists.txt  args.cpp  args.h  lib.cpp  lib.h  main.cpp  static_error.h
src/lib/: CMakeLists.txt  backend.cpp  backend.h  opt.cpp  opt.h  print_ir.cpp  print_ir.h
src/lib/backend/: CMakeLists.txt  const_copy_eliminate.cpp  const_copy_eliminate.h  const_expr_eliminate.cpp  const_expr_eliminate.h  gep_eliminate.cpp  gep_eliminate.h  gv_eliminate.cpp  gv_eliminate.h  mir_printer.cpp  mir_printer.h  mir_translator.cpp  mir_translator.h  sext_eliminate.cpp  sext_eliminate.h  trunc_adjust.cpp  trunc_adjust.h
src/lib/backend/SWPP/: CMakeLists.txt  SWPP.td  SWPPFrameLowering.cpp  SWPPFrameLowering.h  SWPPInstrInfo.cpp  SWPPInstrInfo.h  SWPPMCTargetDesc.cpp  SWPPMCTargetDesc.h  SWPPRegisterInfo.cpp  SWPPRegisterInfo.h  SWPPRegisterInfo.td  SWPPSubtarget.cpp  SWPPSubtarget.h  SWPPTargetInfo.cpp  SWPPTargetInfo.h  SWPPTargetLowering.cpp  SWPPTargetLowering.h  SWPPTargetMachine.cpp  SWPPTargetMachine.h
src/lib/opt/: CMakeLists.txt
test/: CMakeLists.txt
